    * "cvc annotate" now gives an error when it is run on a binary file
    * Conary now restarts itself after updating critical conary components
      (currently, that consists of conary).  Hooks have been added for
      other components using the conary api to specify other troves as
      critical.  Also, hooks have been added for other components to specify
      a trove to update last (CNY-805, CNY-808).

  o Bug Fixes:
    * Conary commands do not perform an unnecessary database checks on the 
      local system. (CNY-571)

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).
    * Files moving between components as part of a single job are now
      treated as file updates instead of separate add/remove events.
      (CNY-750, CNY-786, CNY-359)

  o Client Changes:
    * The source component is now displayed in "conary rq --info"
      output.
    * Entitlements can now be passed into ConaryClient and
      NetworkRepositoryClient objects directly. (CNY-640)
    * Exceptions raised in callback functions are now issued as
      warnings and the current job is finished before
      existing. KeyboardInterrupts and SystemExits are handled
      immediately. (CNY-806)
    * The "--debug" command line flag now provides information that is
      useful to the end-user during the update process.  The
      "--debug=all" flag will provide output that is useful to conary
      developers.
    * The output of "--debug" has been modified when performing
      dependency resolution.  The output should be more helpful to end